--- a/MyMod/changelog.txt
+++ b/MyMod/changelog.txt
@@ -1,95 +1,204 @@
-Build: 1.12.2-14.23.5.2859 - Sat Dec 11 14:43:19 GMT 2021
-	sizableshrimp:
-		Update Installer to 2.1.+ and fix logging on server (#8286)
+Build: 1.18.1-39.0.19 - Wed Jan 12 02:00:21 GMT 2022
+	35673674+alcatrazescapee:
+		Rework world persistence hooks to fix the double registry injection when loading single player worlds. (#8234)
+
+=========
+Build: 1.18.1-39.0.18 - Tue Jan 11 00:16:08 GMT 2022
+	supermartijn642:
+		Update tags for new 1.17 and 1.18 content (#7891)
+
+=========
+Build: 1.18.1-39.0.17 - Mon Jan 10 00:56:15 GMT 2022
+	xfacthd:
+		Fix TerrainParticle rendering black under certain conditions (#8378)
+
+=========
+Build: 1.18.1-39.0.16 - Sun Jan 09 21:36:50 GMT 2022
+	cech12:
+		Allow modded tools to work on glow lichen (#8371)
+
+=========
+Build: 1.18.1-39.0.15 - Sun Jan 09 21:18:44 GMT 2022
+	sciwhiz12:
+		Fix custom climbable blocks not sending a death message (#8372)
 		
-		Update references of files.mcf.net/maven to maven.mcf.net
+		Fixes #8370
+
+=========
+Build: 1.18.1-39.0.14 - Sat Jan 08 21:20:26 GMT 2022
+	pupnewfster:
+		Provide access to the blockstate in BucketPickup#getPickupSound for multiply-logged blocks (#8357)
+
+=========
+Build: 1.18.1-39.0.13 - Sat Jan 08 20:47:41 GMT 2022
+	pupnewfster:
+		Fix clients being unable to deserialize tags for custom registries (#8352)
+
+=========
+Build: 1.18.1-39.0.12 - Sat Jan 08 20:28:36 GMT 2022
+	bageldotjpg:
+		Fix particles going fullbright for a few frames when first spawning (#8291)
+
+=========
+Build: 1.18.1-39.0.11 - Sat Jan 08 18:44:26 GMT 2022
+	diesieben07:
+		Also create parent directories when creating config files (#8364)
+
+=========
+Build: 1.18.1-39.0.10 - Sun Jan 02 18:43:24 GMT 2022
+	JTK222:
+		Fix crash with PermissionsAPI (#8330)
 		
-		Signed-off-by: SizableShrimp <sizableshrimp@sizableshrimp.me>
+		Fixes a crash in singleplayer, when the internal server didn't shut down correctly between world loads.
 
 =========
-Build: 1.12.2-14.23.5.2858 - Fri Dec 10 18:56:42 GMT 2021
-	oriondevelopment:
-		[#8281] Fix the output on Linux in the terminal. (#8282)
-
-=========
-Build: 1.12.2-14.23.5.2857 - Fri Dec 10 15:01:11 GMT 2021
-	oriondevelopment:
-		Fix an issue with the version number generation as well as the logging pattern output. (#8279)
-
-=========
-Build: 1.12.2-14.23.5.2856 - Fri Dec 10 13:33:06 GMT 2021
-	oriondevelopment:
-		[CVE-2021-44228]: Update Log4J to fix the security issue inside it. (#8275)
-
-	oriondevelopment:
-		[CVE-2021-44228]: Update Log4J to fix the security issue inside it. (#8275)
-
-=========
-Build: 1.12.2-14.23.5.2855 - Sat Dec 19 01:47:20 GMT 2020
-	41816363+nerdthened:
-		Only apply the MC-68754 fix on Windows, closes #7546 (#7549)
+Build: 1.18.1-39.0.9 - Mon Dec 27 16:24:00 GMT 2021
+	sciwhiz12:
+		Re-add missing default spawn lists in features (#8285)
 		
-		MC-68754 only affects Minecraft on Windows, as per the comments on Mojang's bug tracker, and the LWJGL bug report (https://github.com/LWJGL/lwjgl/issues/142). This change simply checks if the OS running Minecraft is Windows before applying the fix. This was tested on Windows 10, MacOS Mojave, and Lubuntu (5.8.0-31), and all platforms allowed the window to be resized as expected after exiting fullscreen. As the MC-68754 fix was the cause of #7546, this issue is fixed by applying this patch.
+		Fixes #8265
+		Fixes #8301
 
 =========
-Build: 1.12.2-14.23.5.2854 - Sun Apr 12 17:54:06 GMT 2020
-	daemonumbra:
-		Updated License headers
+Build: 1.18.1-39.0.8 - Wed Dec 22 13:22:32 GMT 2021
+	JTK222:
+		Fixed incorrect generic in PermissionAPI (#8317)
+
+=========
+Build: 1.18.1-39.0.7 - Mon Dec 20 18:35:11 GMT 2021
+	JTK222:
+		Redo of the whole PermissionAPI (#7780)
 		
-		(cherry picked from commit 7b852e5cab5f4114f0efe7956666e68521bed6f3)
-
-	daemonumbra:
-		Fixed the universal jar not having a main class or classpath, for server installations.
+		
+		
+		Co-authored-by: LexManos <LexManos@gmail.com>
 
 =========
-Build: 1.12.2-14.23.5.2852 - Sun Apr 05 00:56:20 GMT 2020
+Build: 1.18.1-39.0.6 - Sun Dec 19 18:28:43 GMT 2021
+	JTK222:
+		Fix misplaced patch in SpreadingSnowyDirtBlock. 
+		
+		Fixes #8308. 
+
+=========
+Build: 1.18.1-39.0.5 - Mon Dec 13 21:58:30 GMT 2021
+	pupnewfster:
+		Add RenderArmEvent to make overriding just the arm rendering not require copying nearly as much vanilla code (#8254)
+
+=========
+Build: 1.18.1-39.0.4 - Mon Dec 13 21:32:20 GMT 2021
+	bageldotjpg:
+		Add MobEffect tags (#8231)
+
+=========
+Build: 1.18.1-39.0.3 - Mon Dec 13 19:49:00 GMT 2021
+	xfacthd:
+		Log missing or unsupported dependencies (#8218)
+
+=========
+Build: 1.18.1-39.0.2 - Mon Dec 13 19:33:05 GMT 2021
+	sciwhiz12:
+		Fix datagen test for sounds definitions provider  (#8249)
+
+=========
+Build: 1.18.1-39.0.1 - Mon Dec 13 19:14:15 GMT 2021
+	williewillus:
+		Fix wrong stage being declared in transition to common (#8267)
+
+=========
+Build: 1.18.1-39.0.0 - Fri Dec 10 19:32:24 GMT 2021
+	curle:
+		Update to 1.18.1
+		
+		Co-Authored by:
+		- Curle
+		_ Orion
+
+=========
+Build: 1.18-38.0.17 - Fri Dec 10 09:23:45 GMT 2021
+	oriondevelopment:
+		[CVE-2021-44228]: Update Log4J to fix the security issue inside it. (#8268)
+
+=========
+Build: 1.18-38.0.16 - Wed Dec 08 00:09:40 GMT 2021
+	jaredlll08:
+		Fix KeyMappings only checking if they conflict with themselves. (#8256)
+
+=========
+Build: 1.18-38.0.15 - Sun Dec 05 19:40:15 GMT 2021
+	xfacthd:
+		Fix ChunkWatchEvent not being fired (#8253)
+
+=========
+Build: 1.18-38.0.14 - Sat Dec 04 01:30:30 GMT 2021
+	git:
+		Call handleUpdateTag for BlockEntities again (#8237)
+
+=========
+Build: 1.18-38.0.13 - Fri Dec 03 22:10:25 GMT 2021
+	commoble:
+		Fix test worldgen data (#8248)
+
+=========
+Build: 1.18-38.0.12 - Thu Dec 02 20:16:47 GMT 2021
 	lexmanos:
-		Fix installer json data entry format.
+		Allow Forge Registries to return key information for overridden objects. Fixes #8230
 
 =========
-Build: 1.12.2-14.v8.99.5033 - Sat Apr 04 21:38:53 GMT 2020
+Build: 1.18-38.0.11 - Thu Dec 02 19:17:12 GMT 2021
+	curle:
+		Save Chunk capabilities to the chunk, rather than recursively to the capabilities.
+
+=========
+Build: 1.18-38.0.10 - Thu Dec 02 15:24:47 GMT 2021
+	gigaherz:
+		Make HandshakeConsumer public again.
+		Fixes #8241
+
+	gigaherz:
+		Fix LevelChunk capability attach crash.
+		Fix client chunks not having capability providers attached.
+		Add capability attach tests.
+
+=========
+Build: 1.18-38.0.8 - Thu Dec 02 00:44:15 GMT 2021
+	curle:
+		Add missing biomes back to the BiomeDictionary
+
+	curle:
+		Complete TODO in ShapedRecipe patch causing logspam related to minecraft:air
+
+=========
+Build: 1.18-38.0.6 - Wed Dec 01 22:12:05 GMT 2021
+	curle:
+		Readd Mixin 0.8.5 to fix modules issues.
+
+=========
+Build: 1.18-38.0.5 - Wed Dec 01 16:56:24 GMT 2021
+	curle:
+		Readd PoseStack field to RenderTooltipEvent.
+
+=========
+Build: 1.18-38.0.4 - Wed Dec 01 01:29:57 GMT 2021
+	curle:
+		Fix custom loot serializers using wrong registry names
+
+=========
+Build: 1.18-38.0.3 - Wed Dec 01 01:15:13 GMT 2021
 	lexmanos:
-		Skip userdev remap as we don't have any yet.
+		Fix DungeonHooks not returning correct values. Fixes dungeons in world spawning pigs.
 
+=========
+Build: 1.18-38.0.2 - Wed Dec 01 00:23:23 GMT 2021
 	lexmanos:
-		Fix J13 ambiguous reference and JenkinsFile skipping a step.
-
-	lexmanos:
-		Migrate to FG3
-
-=========
-Build: 1.12.2-14.23.5.2846 - Tue Sep 03 21:22:46 GMT 2019
-	ichttt:
-		Fix CME when removing ticket managers (#5861)
+		Fix dedicated server install. Closes #8226
+		Fix example mod
+		Fix obf issue with records. Closes #8228
+		Fix dependencies beingg out of sync from vanilla. Closes #8227
+		Disable mixin due to module incompatibility.
 
 =========
-Build: 1.12.2-14.23.5.2844 - Thu Aug 29 02:33:00 GMT 2019
-	barteks2x:
-		Fix client sometimes generating biomes, causing incorrect biome
-		generation on integrated server (#5720)
-
-	bs2609:
-		Add checks for tile entities in now-unloaded chunks (#5724)
-
-=========
-Build: 1.12.2-14.23.5.2843 - Thu Aug 29 02:23:04 GMT 2019
-	bs2609:
-		Fix invalid placeholder entity attributes (MC-150405) (#5718)
-
-=========
-Build: 1.12.2-14.23.5.2842 - Thu Aug 29 02:08:57 GMT 2019
-	bs2609:
-		Allow conditional loading of advancements (#5255)
-
-=========
-Build: 1.12.2-14.23.5.2841 - Thu Aug 29 01:58:50 GMT 2019
-	bs2609:
-		Improve performance of persistent chunk checks (#5706)
-
-	jensen.derik:
-		Fix lightning not triggering EntityJoinWorldEvent (#5290)
-
-=========
-Build: 1.12.2-14.23.5.2840 - Thu Aug 29 01:19:55 GMT 2019
-	lexmanos:
-		Fix copy paste derp
+Build: 1.18-38.0.1 - Tue Nov 30 20:56:52 GMT 2021
+	gigaherz:
+		Fix mod resources not loading.
+		Add BreakingItemParticle.java.patch which I forgot to commit during the porting.
