Added sword and block w/ working textures

--- a/MyMod/src/main/resources/assets/attemptone/lang/en_us.json
+++ b/MyMod/src/main/resources/assets/attemptone/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-	"item.attemptone.example_item": "Bababooey"
+	"item.attemptone.example_item": "example_item",
+	"itemGroup.attemptone": "example_item"
+	"block.attemptone.example_block" : "example_block"
 }
